Added comments to the code

--- a/Recommendation-System.ipynb
+++ b/Recommendation-System.ipynb
@@ -5,7 +5,7 @@
    "id": "c57cbb6a",
    "metadata": {},
    "source": [
-    "Simple Recommender based on Popularity and Rating"
+    "**Simple Recommender based on Popularity and Rating**"
    ]
   },
   {
@@ -15,6 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importing required packages and modules\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4ef9283d",
    "metadata": {},
    "outputs": [
@@ -36,12 +38,14 @@
     }
    ],
    "source": [
+    "# Reading movies dataset\n",
+    "\n",
     "movies_df = pd.read_csv(r'C:\\\\Users\\\\v-lpilla\\\\Downloads\\\\Recommendation System\\\\Data\\\\movies_metadata.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9f93ee29",
    "metadata": {},
    "outputs": [
@@ -88,17 +92,21 @@
     }
    ],
    "source": [
+    "# Checking for null values in the movies dataset\n",
+    "\n",
     "print(movies_df.shape)\n",
     "movies_df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5c309867",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Filtering out unrequired columns from the data\n",
+    "\n",
     "movies_df = movies_df[['id', \n",
     "                       'title', \n",
     "                       'genres', \n",
@@ -167,17 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0ac4e218",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Removing rows that have different data type to aid data type conversion\n",
+    "\n",
     "movies_df = movies_df.loc[movies_df['popularity'] != 'Beware Of Frost Bites']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9cd32ee5",
    "metadata": {},
    "outputs": [
@@ -327,6 +337,8 @@
     }
    ],
    "source": [
+    "# Converting column data type for further calculations\n",
+    "\n",
     "movies_df['popularity'] = movies_df['popularity'].astype('float') \n",
     "\n",
     "movies_df.sort_values(by = 'popularity', ascending = False)\n",
@@ -336,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6b66d689",
    "metadata": {},
    "outputs": [
@@ -372,6 +384,8 @@
     }
    ],
    "source": [
+    "# Calculating average rating based on votes\n",
+    "\n",
     "avg_rating = movies_df['vote_average'].mean()\n",
     "\n",
     "print(avg_rating)\n",
@@ -417,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "b024b2b4",
    "metadata": {},
    "outputs": [
@@ -431,6 +445,8 @@
     }
    ],
    "source": [
+    "# Calculating quantiles to fetch valid movies with vote count greater than or equal to 95% of the movies\n",
+    "\n",
     "avg_vote_count = movies_df['vote_count'].mean()\n",
     "print(avg_vote_count)\n",
     "\n",
@@ -440,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7d9790de",
    "metadata": {},
    "outputs": [
@@ -787,17 +803,21 @@
     }
    ],
    "source": [
+    "# Fetching valid movies\n",
+    "\n",
     "valid_movies = movies_df.loc[movies_df['vote_count'] >= min_vote_count]\n",
     "valid_movies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f36aa23e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to calculate rating based on IMDB formula\n",
+    "\n",
     "def weighted_rating(df, m=min_vote_count, C=avg_rating):\n",
     "    v = df['vote_count']\n",
     "    R = df['vote_average']\n",
@@ -806,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "1cc80911",
    "metadata": {},
    "outputs": [
@@ -1190,13 +1210,15 @@
     }
    ],
    "source": [
+    "# Calculating the score based on IMDB formula for valid movies\n",
+    "\n",
     "valid_movies['score'] = valid_movies.apply(weighted_rating, axis = 1)\n",
     "valid_movies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "0106369b",
    "metadata": {},
    "outputs": [
@@ -1395,6 +1417,8 @@
     }
    ],
    "source": [
+    "# Popular movies preview\n",
+    "\n",
     "valid_movies = valid_movies.sort_values('score', ascending = False)\n",
     "\n",
     "valid_movies[['title', 'vote_count', 'vote_average', 'score', 'popularity']].head(15)"
@@ -1402,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "9bace055",
    "metadata": {},
    "outputs": [
@@ -1428,6 +1452,8 @@
     }
    ],
    "source": [
+    "# Plotting top 6 movies based on the calculated score\n",
+    "\n",
     "valid_movies['score'] = valid_movies['score'].astype('float')\n",
     "pop= valid_movies.sort_values('score', ascending=False)\n",
     "\n",
@@ -1441,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c93eeed8",
    "metadata": {},
    "outputs": [
@@ -1467,6 +1493,8 @@
     }
    ],
    "source": [
+    "# Plotting top 6 movies based on popularity\n",
+    "\n",
     "movies_df['popularity'] = movies_df['popularity'].astype('float')\n",
     "pop= movies_df.sort_values('popularity', ascending=False)\n",
     "\n",
@@ -1488,11 +1516,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "884a5f73",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Removing rows that have different data type to aid data type conversion\n",
+    "\n",
     "movies_df = movies_df.loc[movies_df['id'] != '1997-08-20']\n",
     "movies_df = movies_df.loc[movies_df['id'] != '2012-09-29']\n",
     "movies_df = movies_df.loc[movies_df['id'] != '2014-01-01']"
@@ -1500,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "3e691935",
    "metadata": {},
    "outputs": [
@@ -1910,6 +1940,8 @@
     }
    ],
    "source": [
+    "# Reading credits data and merging it with movies dataset\n",
+    "\n",
     "credits_df = pd.read_csv(r'C:\\\\Users\\\\v-lpilla\\\\Downloads\\\\Recommendation System\\\\Data\\\\credits.csv')\n",
     "\n",
     "movies_df['id'] = movies_df['id'].astype(int)\n",
@@ -1921,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "28d197fe",
    "metadata": {},
    "outputs": [
@@ -1938,6 +1970,8 @@
     }
    ],
    "source": [
+    "# Handling Null values in description column\n",
+    "\n",
     "print(merged_df.columns)\n",
     "merged_df['overview'].head()\n",
     "merged_df['description'] = merged_df['overview'] + merged_df['tagline']\n",
@@ -1946,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "e5c7633d",
    "metadata": {},
    "outputs": [
@@ -1962,6 +1996,8 @@
     }
    ],
    "source": [
+    "# Creating TF-IDF matrix for description column\n",
+    "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
     "tfidf = TfidfVectorizer(analyzer='word', ngram_range=(1, 2), min_df=1, stop_words='english')\n",
@@ -1971,11 +2007,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "cb18f1cf",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculating cosine similarity\n",
+    "\n",
     "from sklearn.metrics.pairwise import linear_kernel\n",
     "\n",
     "cosine_sim = linear_kernel(tfidf_matrix, tfidf_matrix)"
@@ -1983,21 +2021,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "4f92fecb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating index column for the df\n",
+    "\n",
     "indices = pd.Series(merged_df.index, index = merged_df['title']).drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c770839f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to get movie recommendations\n",
+    "\n",
     "def get_recommendations(title, cosine_sim = cosine_sim, indices = indices, merged_df = merged_df):\n",
     "    if title not in indices:\n",
     "        return f\"'{title}' not found in the dataset.\"\n",
@@ -2098,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "2de632c9",
    "metadata": {},
    "outputs": [
@@ -2118,6 +2160,8 @@
     }
    ],
    "source": [
+    "# Reading keywords data and merging it with movies dataset\n",
+    "\n",
     "keywords_df = pd.read_csv(r'C:\\\\Users\\\\v-lpilla\\\\Downloads\\\\Recommendation System\\\\Data\\\\keywords.csv')\n",
     "keywords_df['id'] = keywords_df['id'].astype(int)\n",
     "\n",
@@ -2127,11 +2171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "99932e92",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to convert stringified lists into lists\n",
+    "\n",
     "from ast import literal_eval\n",
     "\n",
     "def safe_literal_eval(val):\n",
@@ -2142,6 +2188,7 @@
     "    except (ValueError, SyntaxError):\n",
     "        return []\n",
     "\n",
+    "# Converting stringified lists into lists\n",
     "\n",
     "features = ['cast', 'crew', 'keywords', 'genres', 'production_companies']\n",
     "for feature in features:\n",
@@ -2150,11 +2197,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "39241830",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to fetch director from the list of crew members\n",
+    "\n",
     "def get_director(x):\n",
     "    for i in x:\n",
     "        if i['job'] == 'Director':\n",
@@ -2164,11 +2213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "8eb4d410",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to get the list of top 3 actors from cast\n",
+    "\n",
     "def get_list(x):\n",
     "    if isinstance(x, list):\n",
     "        names = [i['name'] for i in x]\n",
@@ -2181,11 +2232,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "d9e2952e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fetching director and top 3 actors\n",
+    "\n",
     "merged_df['director'] = merged_df['crew'].apply(get_director)\n",
     "\n",
     "features = ['cast', 'keywords', 'genres', 'production_companies']\n",
@@ -2195,7 +2248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "e5893bc0",
    "metadata": {},
    "outputs": [
@@ -2333,17 +2386,18 @@
     }
    ],
    "source": [
-    "merged_df[['title', 'cast', 'director', 'keywords', 'genres', 'adult', 'production_companies', 'original_language']].head(5)\n"
+    "merged_df[['title', 'cast', 'director', 'keywords', 'genres', 'adult', 'production_companies', 'original_language']].head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "5b067a0a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "# Custom language mapping to fetch the language name from language codes\n",
+    "\n",
     "import pycountry\n",
     "\n",
     "custom_lang_map = {\n",
@@ -2364,11 +2418,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "f6c11b83",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to fetch the language name from language codes\n",
+    "\n",
     "def get_language_name(code):\n",
     "    if pd.isna(code):\n",
     "        return \"Unknown\"\n",
@@ -2386,7 +2442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "e012fe69",
    "metadata": {},
    "outputs": [
@@ -2518,17 +2574,21 @@
     }
    ],
    "source": [
+    "# Fetching language names from language codes\n",
+    "\n",
     "merged_df['language_name'] = merged_df['original_language'].apply(get_language_name)\n",
-    "merged_df[['title', 'cast', 'director', 'keywords', 'genres', 'production_companies', 'language_name']].head(5)\n"
+    "merged_df[['title', 'cast', 'director', 'keywords', 'genres', 'production_companies', 'language_name']].head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "d1c1ab25",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fuction to convert string to lower case and clean the remove spaces\n",
+    "\n",
     "def clean_data(x):\n",
     "    if isinstance(x, list):\n",
     "        return [str.lower(i.replace(\" \", \"\")) for i in x]\n",
@@ -2554,11 +2614,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "62f1c729",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to merge all the relavant metadata\n",
+    "\n",
     "def create_soup(x):\n",
     "    return ' '.join(x['keywords']) + ' ' + ' '.join(x['cast']) + ' ' + x['director'] + ' ' + ' '.join(x['genres']) + ' ' + ' '.join(x['production_companies']) + ' ' + ' '.join(x['language_name'])"
    ]
@@ -2607,11 +2669,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "882edd45",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to tokenize the metadata soup\n",
+    "\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
     "count = CountVectorizer(stop_words = 'english')\n",
@@ -2620,11 +2684,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "dcef410f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calculating cosine similarity\n",
+    "\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
     "cosine_sim2 = cosine_similarity(count_matrix, count_matrix)"
@@ -2632,11 +2698,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "bb45c6d8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Creating index column for the df\n",
+    "\n",
     "merged_df = merged_df.reset_index()\n",
     "indices = pd.Series(merged_df.index, index = merged_df['title'])"
    ]
